# watchlist

./: LICENSE  README.org
backend/: Cargo.toml
backend/migrations/2021-09-05-171037_movies/: down.sql  up.sql
backend/src/: db.rs  diesel_schema.rs  main.rs  omdb_helpers.rs
backend/src/api/: catchers.rs
backend/src/api/endpoints/: error_status.rs  mod.rs  omdb.rs  watchlist.rs
backend/src/crud/: movies.rs
backend/src/models/: movies.rs
backend/src/schemas/: movies.rs
